log
Fri May  1 09:01:08 PM UTC 2026: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘createTreeMap’:
treemap.c:51:5: error: ‘map’ undeclared (first use in this function); did you mean ‘mapa’?
   51 |     map->lower_than = lower_than;
      |     ^~~
      |     mapa
treemap.c:51:5: note: each undeclared identifier is reported only once for each function it appears in
1232d33
Fri May  1 09:01:28 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
6e52e69
Fri May  1 09:11:19 PM UTC 2026: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:9: error: ‘keyAux’ undeclared (first use in this function)
   63 |         keyAux = aux->pair->key;
      |         ^~~~~~
treemap.c:63:9: note: each undeclared identifier is reported only once for each function it appears in
e7265ba
Fri May  1 09:11:47 PM UTC 2026: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  4|7
total_score: 5/60
2ada75c
Fri May  1 09:18:58 PM UTC 2026: 
 treemap.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:64:18: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘int *’ [-Werror=format=]
   64 |         printf("%d", &cont);
      |                 ~^   ~~~~~
      |                  |   |
      |                  int int *
      |                 %ls
cc1: all warnings being treated as errors
14d33bb
Fri May  1 09:19:14 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/60
54f33c3
Fri May  1 09:22:21 PM UTC 2026: 
 treemap.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:61:18: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   61 |     int keyInt = (int)key
      |                  ^
treemap.c:62:5: error: expected ‘,’ or ‘;’ before ‘TreeNode’
   62 |     TreeNode *aux = tree->root;
      |     ^~~~~~~~
treemap.c:63:11: error: ‘aux’ undeclared (first use in this function)
   63 |     while(aux != NULL){
      |           ^~~
treemap.c:63:11: note: each undeclared identifier is reported only once for each function it appears in
cc1: all warnings being treated as errors
f39110e
Fri May  1 09:22:47 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:61:18: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   61 |     int keyInt = (int)key;
      |                  ^
treemap.c:64:22: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   64 |         int keyAux = (int)aux->pair->key;
      |                      ^
cc1: all warnings being treated as errors
d9b41ef
Fri May  1 09:23:18 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/60
91ecda4
Fri May  1 09:29:59 PM UTC 2026: 
 treemap.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:12: error: implicit declaration of function ‘lower_than_int’ [-Wimplicit-function-declaration]
   63 |         if(lower_than_int(key, aux->pair->key)) aux = aux->left;
      |            ^~~~~~~~~~~~~~
3642175
Fri May  1 09:31:04 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:12: error: implicit declaration of function ‘lower_than’ [-Wimplicit-function-declaration]
   63 |         if(lower_than(key, aux->pair->key)) aux = aux->left;
      |            ^~~~~~~~~~
849ec37
Fri May  1 09:31:39 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/60
02a60aa
Fri May  1 09:36:46 PM UTC 2026: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:12: error: implicit declaration of function ‘isEqual’; did you mean ‘is_equal’? [-Wimplicit-function-declaration]
   63 |         if(isEqual(tree, key, aux->pair->key) == 1){
      |            ^~~~~~~
      |            is_equal
treemap.c: At top level:
treemap.c:71:5: error: expected identifier or ‘(’ before ‘return’
   71 |     return NULL;
      |     ^~~~~~
treemap.c:72:1: error: expected identifier or ‘(’ before ‘}’ token
   72 | }
      | ^
treemap.c: In function ‘searchTreeMap’:
treemap.c:70:5: error: control reaches end of non-void function [-Werror=return-type]
   70 |     }
      |     ^
cc1: all warnings being treated as errors
cb9f7d9
Fri May  1 09:37:24 PM UTC 2026: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:63:12: error: implicit declaration of function ‘isEqual’; did you mean ‘is_equal’? [-Wimplicit-function-declaration]
   63 |         if(isEqual(tree, key, aux->pair->key) == 1){
      |            ^~~~~~~
      |            is_equal
504fe8a
Fri May  1 09:37:42 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/60
0e89f72
Fri May  1 09:46:07 PM UTC 2026: 
 treemap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:79:29: error: ‘return’ with a value, in function returning void [-Wreturn-mismatch]
   79 |     if(tree == NULL) return NULL;
      |                             ^~~~
treemap.c:78:6: note: declared here
   78 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:80:22: error: implicit declaration of function ‘createNodo’; did you mean ‘createTreeNode’? [-Wimplicit-function-declaration]
   80 |     TreeNode *nodo = createNodo(key, value);
      |                      ^~~~~~~~~~
      |                      createTreeNode
treemap.c:80:22: error: initialization of ‘TreeNode *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
treemap.c:93:16: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   93 |         else if(tree->lower_than(aux->pair->key, key))
      |                ^
cc1: all warnings being treated as errors
bb5f6de
Fri May  1 09:46:51 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:93:16: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=dangling-else]
   93 |         else if(tree->lower_than(aux->pair->key, key))
      |                ^
cc1: all warnings being treated as errors
03b88f3
Fri May  1 09:48:13 PM UTC 2026: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  12|6
total_score: 15/60
fddfb44
Fri May  1 09:50:50 PM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  12|6
total_score: 15/60
3d47655
Fri May  1 09:51:42 PM UTC 2026: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|5
total_score: 25/60
a04ddb3
Fri May  1 09:54:05 PM UTC 2026: 
 treemap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:118:24: error: expected ‘;’ before ‘}’ token
  118 |         aux = aux->left
      |                        ^
      |                        ;
  119 |     }
      |     ~                   
4a991b4
Fri May  1 09:54:13 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|5
total_score: 25/60
dab5549
